fix scroll issue on mobile and adjusted home on desktop

--- a/assets/css/components/global.css
+++ b/assets/css/components/global.css
@@ -252,14 +252,12 @@ th {
    ========================================================================== */
 
 html {
-    overflow-x: hidden;
     overflow-y: scroll;
     font-size: 62.5%;
 
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-    overflow-x: hidden;
     color: color(var(--color-base) l(+20%));
     font-family: 'IBM Plex Mono', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 1.5rem;
