--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -16,7 +16,7 @@ span.site-title {
 }
 
 .site-description {
-    padding-left: 20vw;
+    padding-left: 30vw;
 }
 
 
